gateway-global-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservice-ingress
  namespace: skais-2-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    # Pure Kubernetes Load Balancing Comparison (No Istio):

    # WITHOUT ANNOTATION (Default):
    # NGINX is the Load Balancer. Uses advanced algorithms (least_conn, ip_hash),
    # re-uses TCP connections (keep-alive), and talks directly to Pod IPs.

    # WITH service-upstream: "true":
    # kube-proxy (iptables) is the Load Balancer. Dumb random routing at Linux kernel level.
    # NGINX acts only as a proxy to the Service ClusterIP. No keep-alive to Pods.

    # FOR ISTIO better to put TRUE
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /service-a(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: service-a-svc
                port:
                  number: 8080

          - path: /service-b(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: service-b-svc
                port:
                  number: 8080
